--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
         html {
             background-color: pink;
             background-image: url('fairy.gif');
-            background-repeat: no-repeat;
-            background-attachment: fixed;
+            /*background-repeat: no-repeat;*/
+/*            background-attachment: fixed;
             background-position: left bottom; 
-
+*/
         }
         * {
           box-sizing: border-box;
           font-size: 12pt;
-          font-family: "Arial Rounded MT Bold"
+          font-family: "Verdana"
         }
 
         /* Create two equal columns that floats next to each other */
@@ -113,7 +113,7 @@
             </div>
         </div>
         <div class="box music">
-            <iframe src="https://open.spotify.com/embed/track/02IrbcCZfaMcKRWejgtvRo" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            <iframe src="https://open.spotify.com/embed/track/10Do5aeomfFayeedWhEBAS" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
         </div>
       </div>
       <div class="column right">
