adding about me

--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
         <div class="box contact">contact
             <div>
                 
-                <a href = "mailto:tesshbianchi@gmail.com">
+                <a href="mailto:tesshbianchi@gmail.com">
                 <img src="mail.gif"></img>
                 </a>
-                
+
             </div>
         </div>
         <div class="box music">
@@ -117,7 +117,14 @@
         </div>
       </div>
       <div class="column right">
-        <div class="box about">about</div>
+        <div class="box about">
+            <div>about </div>
+            <div class="small">Hello! Welcome to my webpage! </div>
+
+            <div class="small">I'm a software engineer currently working on a city planning product called <a class="small" href="https://hello.delve.sidewalklabs.com/">Delve</a> at Sidewalk Labs. I previously worked on Self Driving Cars at Uber ATG.</div>
+
+
+        </div>
         <div class="box projects">Top 8 Projects</div>
       </div>
     </div>
