--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
           padding-bottom: 5px;
 
         }
-        .about {
+        /*.about {
           height: 400px;
           
-        }
+        }*/
         .about-text
         {
             padding: 5px;
@@ -189,7 +189,9 @@
                     Hello! Welcome to my webpage!
                     <br><br>
 
-                    I'm a software engineer currently working on a city planning product called <a class="small" href="https://hello.delve.sidewalklabs.com/">Delve</a> at Sidewalk Labs. I previously worked on Self 
+                    I'm a software engineer currently working on a city planning product called <a class="small" href="https://hello.delve.sidewalklabs.com/">Delve</a> at Sidewalk Labs. I previously worked on Self Driving at Uber ATG.
+
+                    <img src="city.gif" style="width:200px; margin:20px auto; display:block"></img>
 
                  </div>
 
