--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <img src="tess.jpg" class="column left" style='width:auto;padding:0px'></img>
                 <div class="column right" style='margin-top:20px'>
                     <div class='small'>she/her</div>
-                    <div class='small'>Zillenial</div>
+                    <div class='small'>zillenial</div>
                     <div class='small'>Miami, Florida</div>
                     <div class='small'>United States</div>
                     <img src="online.png" style="width:90px; margin-top:30px"></img>
