--- a/index.html
+++ b/index.html
@@ -172,6 +172,11 @@
                 <img src="linkedin.png"></img>
                 </a>
             </div>
+            <div>
+                <a href="https://soundcloud.com/user-552616949">
+                <img src="soundcloud.png"></img>
+                </a>
+            </div>
 
         </div>
         <div class="box music">
