city pic change

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             width:100px;
         }
         .friend-img-cont{
-            width:100px;
+            max-width: 100px;
             margin: 10px
         }
         .friend-img-cont > a {
