--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <style>
         html {
             background-color: pink;
-            background-image: url('fairy.gif');
+            background-image: url('city.gif');
         }
         * {
           box-sizing: border-box;
@@ -70,15 +70,15 @@
             padding: 5px;
         }
         .projects {
-          height: 500px;
+          height: 300px;
         }
 
         .friend-img {
             width:100px;
         }
         .friend-img-cont{
-            max-width: 100px;
-            margin: 10px
+            max-width: 97px;
+            margin: 5px
         }
         .friend-img-cont > a {
             color: black;
@@ -132,7 +132,7 @@
             <div class="row" style='margin:0px;'>
                 <img src="tess.jpg" class="column left" style='width:auto;padding:0px'></img>
                 <div class="column right" style='margin-top:20px'>
-                    <div class='small'>she/her</div>
+                    <!-- <div class='small'>she/her</div> -->
                     <div class='small'>zillenial</div>
                     <div class='small'>Miami, Florida</div>
                     <div class='small'>United States</div>
@@ -205,13 +205,37 @@
         </div>
         <div class="box projects">top projects<br><br>
 
-            <div class="friend-img-cont tooltip" title="thingssss">
-                <span class="tooltiptext med">Generated inspirational quotes by training GPT-2 on tweets from Jocko Willink</span>
+            <div class="friend-img-cont tooltip">
+                <span class="tooltiptext med">Generated inspirational quotes by training GPT-2 on tweets from Jocko Willink.</span>
                 <a href="https://twitter.com/deepjocko/">
                     <div class='small bold center'>DeepJocko</div>
                     <img  class="friend-img" src="jocko.jpeg"></img>
                 </a>
             </div>
+
+            <div class="friend-img-cont tooltip">
+                <span class="tooltiptext med">Wrote mission code for the 2016 World Championship winning robot, Navigator.</span>
+                <a href="http://navigatoruf.org/">
+                    <div class='small bold center'>Navigator</div>
+                    <img  class="friend-img" src="navigator.jpg"></img>
+                </a>
+            </div>
+
+           <!--  <div class="friend-img-cont tooltip">
+                <span class="tooltiptext med">Wrote mission code for the 2016 World Championship winning robot, Navigator.</span>
+                <a href="http://navigatoruf.org/">
+                    <div class='small bold center'>Navigator</div>
+                    <img  class="friend-img" src="navigator.jpg"></img>
+                </a>
+            </div>
+
+            <div class="friend-img-cont tooltip">
+                <span class="tooltiptext med">Wrote mission code for the 2016 World Championship winning robot, Navigator.</span>
+                <a href="http://navigatoruf.org/">
+                    <div class='small bold center'>Navigator</div>
+                    <img  class="friend-img" src="navigator.jpg"></img>
+                </a>
+            </div> -->
         </div>
       </div>
     </div>
